<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.MainActivity" >

    <TextView
        android:id="@+id/characterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_character"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/characterImage"
        app:layout_constraintStart_toStartOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/characterImage" />

    <TextView
        android:id="@+id/idiomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_idiom"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idiomImage"
        app:layout_constraintStart_toStartOf="@+id/idiomImage"
        app:layout_constraintTop_toBottomOf="@+id/idiomImage" />

    <TextView
        android:id="@+id/sayingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_saying"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sayingImage"
        app:layout_constraintStart_toStartOf="@+id/sayingImage"
        app:layout_constraintTop_toBottomOf="@+id/sayingImage" />

    <TextView
        android:id="@+id/relayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_relay"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/relayImage"
        app:layout_constraintStart_toStartOf="@+id/relayImage"
        app:layout_constraintTop_toBottomOf="@+id/relayImage" />

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_body"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bodyImage"
        app:layout_constraintStart_toStartOf="@+id/bodyImage"
        app:layout_constraintTop_toBottomOf="@+id/bodyImage" />

    <TextView
        android:id="@+id/objectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_object"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/objectImage"
        app:layout_constraintStart_toStartOf="@+id/objectImage"
        app:layout_constraintTop_toBottomOf="@+id/objectImage" />

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idiomImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/user"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/idiomImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/language"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/sayingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idiomImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/saying"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/relayImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bodyImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/characterText"
        app:srcCompat="@drawable/relay"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/bodyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/objectImage"
        app:layout_constraintStart_toEndOf="@id/relayImage"
        app:layout_constraintTop_toTopOf="@+id/idiomText"
        app:srcCompat="@drawable/communication"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/objectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gameClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bodyImage"
        app:layout_constraintTop_toTopOf="@+id/sayingText"
        app:srcCompat="@drawable/object"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>